improved state-of-the-art excerpt

--- a/sections/state-of-the-art.tex
+++ b/sections/state-of-the-art.tex
@@ -1,4 +1,4 @@
-The semantics and implementation of our in-house stream-based flow-record querier has underwent significant changes in the last few years. This section is dedicated to perform an inside-out study of the querier, examining all its major (and minor) changes to allow us to better make a pragmatic stand towards its overall packaging and improvement. The organization of the section is described below.
+The semantics and implementation of our in-house flow-record querier has underwent significant changes in the last few years. This section is dedicated to perform an inside-out study of the querier, examining all its major (and minor) changes to allow us to better make a pragmatic stand towards its overall packaging and improvement. The organization of the section is described below.
 
 \vspace{50pt}
 
