trafficm: added rough remote metering

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -81,7 +81,8 @@
 }
 
 @inproceedings{vperelman:2011,
-author={Perelman, V. and Melnikov, N. and Schonwalder, J.}, 
+author={Perelman, Vladislav and Melnikov, Nikolay 
+				and Sch\"{o}nw\"{a}lder, J\"{u}rgen}, 
 booktitle={Integrated Network Management (IM), 2011 IFIP/IEEE International Symposium on}, 
 title={{Flow signatures of Popular Applications}}, 
 year={2011}, 
@@ -415,6 +416,19 @@ doi={10.1109/TDSC.2007.70207},
 ISSN={1545-5971}
 }
 
+@misc{rfc4502,
+  author="S. Waldbusser",
+  title="{Remote Network Monitoring Management Information Base Version 2}",
+  series="Request for Comments",
+  number="4502",
+  howpublished="RFC 4502 (Draft Standard)",
+  publisher="IETF",
+  organization="Internet Engineering Task Force",
+  year=2006,
+  month=may,
+  url="http://www.ietf.org/rfc/rfc4502.txt",
+}
+
 @inproceedings{phaag:2006,
  author = {Haag, Peter},
  title = {{Netflow Tools NfSen and NFDUMP}},
@@ -464,11 +478,37 @@ ISSN={0098-3063},
   url="http://www.ietf.org/rfc/rfc3954.txt",
 }
 
+@misc{rfc3577,
+  author="S. Waldbusser and R. Cole and C. Kalbfleisch and D. Romascanu",
+  title="{Introduction to the Remote Monitoring (RMON) Family of MIB Modules}",
+  series="Request for Comments",
+  number="3577",
+  howpublished="RFC 3577 (Informational)",
+  publisher="IETF",
+  organization="Internet Engineering Task Force",
+  year=2003,
+  month=aug,
+  url="http://www.ietf.org/rfc/rfc3577.txt",
+}
+
 @article{falted:2003,
- author = {Francesc Alted and Mercedes Fernández-Alonso},
+ author = {Francesc Alted and Mercedes Fern\'{a}ndez-Alonso},
  title = {{PyTables: Processing And Analyzing Extremely Large Amounts Of Data In 
 		  Python}},
  year = {2003}
+}
+
+@misc{rfc2819,
+  author="S. Waldbusser",
+  title="{Remote Network Monitoring Management Information Base}",
+  series="Request for Comments",
+  number="2819",
+  howpublished="RFC 2819 (Standard)",
+  publisher="IETF",
+  organization="Internet Engineering Task Force",
+  year=2000,
+  month=may,
+  url="http://www.ietf.org/rfc/rfc2819.txt",
 }
 
 @article{fbergadano:2002,
@@ -529,6 +569,19 @@ ISSN={0098-3063},
    url = {http://dx.doi.org/10.1007/BF00994018},
    note = {10.1007/BF00994018},
    year = {1995}
+}
+
+@misc{rfc1157,
+  author="J.D. Case and M. Fedor and M.L. Schoffstall and J. Davin",
+  title="{Simple Network Management Protocol (SNMP)}",
+  series="Request for Comments",
+  number="1157",
+  howpublished="RFC 1157 (Historic)",
+  publisher="IETF",
+  organization="Internet Engineering Task Force",
+  year=1990,
+  month=may,
+    url="http://www.ietf.org/rfc/rfc1157.txt",
 }
 
 @article{fallen:1983,
