--- a/frontback/contents.tex
+++ b/frontback/contents.tex
@@ -91,6 +91,9 @@
 				\acro{DDoS}{Distributed Denial of Service}
 				\acro{CAPTCHA}{Completely Automated Public Turing 
 											 Test to Tell Computers and Humans Apart}
+				\acro{RMON}{Remote Network Monitoring}
+				\acro{MIB}{Management Information Base}									
+				\acro{SNMP}{Simple Network Management Protocol}									
     \end{acronym}                     
 \endgroup
 
