trafficm: added rough remote metering

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -545,6 +545,19 @@ ISSN={0098-3063},
  address = {Berkeley, CA, USA},
 }
 
+@misc{rfc2722,
+  author="N. Brownlee and C. Mills and G. Ruth",
+  title="{Traffic Flow Measurement: Architecture}",
+  series="Request for Comments",
+  number="2722",
+  howpublished="RFC 2722 (Informational)",
+  publisher="IETF",
+  organization="Internet Engineering Task Force",
+  year=1999,
+  month=oct,
+  url="http://www.ietf.org/rfc/rfc2722.txt",
+}
+
 @article{yyang:1997,
 	author = {Yiming Yang and Jan O. Pedersen},
 	title = {{A Comparative Study on Feature Selection in Text Categorization}},	
@@ -583,6 +596,24 @@ ISSN={0098-3063},
   month=may,
     url="http://www.ietf.org/rfc/rfc1157.txt",
 }
+
+@inproceedings{wroyce:1987,
+ author = {Royce, W. W.},
+ title = {{Managing the Development of Large 
+					 Software Systems: Concepts and Techniques}},
+ booktitle = {{Proceedings of the 9th International 
+							 Conference on Software Engineering}},
+ series = {ICSE '87},
+ year = {1987},
+ isbn = {0-89791-216-0},
+ location = {Monterey, California, United States},
+ pages = {328--338},
+ numpages = {11},
+ url = {http://dl.acm.org/citation.cfm?id=41765.41801},
+ acmid = {41801},
+ publisher = {IEEE Computer Society Press},
+ address = {Los Alamitos, CA, USA},
+} 
 
 @article{fallen:1983,
  author = {Allen, James F.},
