trafficm: added tcpdump and wireshark snippet

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,25 @@
+@manual{tcpdump-manpage,
+  author = {Jacobson, Van and Leres, Craig and McCanne, Steven},
+  title = {{tcpdump - dump traffic on a network}},
+  organization = {Lawrence Berkeley National Laboratory},
+  address = {University of California, Berkeley, CA}
+}
+
+@manual{pcap-manpage,
+  author = {Jacobson, Van and Leres, Craig and McCanne, Steven},
+  title = {{pcap - Packet Capture library}},
+  organization = {Lawrence Berkeley National Laboratory},
+  address = {University of California, Berkeley, CA}
+}
+
+@manual{wireshark-manpage,
+  author = {Combs, Gerald},
+  title = {{wireshark - Interactively dump and analyze network traffic}},
+  organization = {University of Missouri},
+  address = {Kansas City}
+}
+
+
 @unpublished{jschauer:2012,
  author = {Schauer, Johannes and Melnikov, Nikolay and 
 		   		 Sch\"{o}nw\"{a}lder, J\"{u}rgen},
@@ -10,6 +32,17 @@
 		   		 Sch\"{o}nw\"{a}lder, J\"{u}rgen},
  title = {{Automated Failure Identification under IPv6 Transition Mechanisms}},
  year = {2012},
+}
+
+@book{csanders:2011,
+  title={{Practical Packet Analysis: Using Wireshark
+ 					to Solve Real-World Network Problems}},
+  author={Sanders, Chris},
+  isbn={9781593272661},
+  series={No Starch Press Series},
+  url={http://books.google.co.in/books?id=R-eiQwAACAAJ},
+  year={2011},
+  publisher={No Starch Press}
 }
 
 @inproceedings{rbeverly:2011,
