--- a/frontback/contents.tex
+++ b/frontback/contents.tex
@@ -95,6 +95,7 @@
 				\acro{MIB}{Management Information Base}									
 				\acro{SNMP}{Simple Network Management Protocol}									
 				\acro{RTFM}{Realtime Traffic Flow Measurement}
+				\acro{GUI}{Graphical User Interface}
     \end{acronym}                     
 \endgroup
 
