--- a/bibliography.bib
+++ b/bibliography.bib
@@ -484,6 +484,47 @@ doi={10.1109/TCE.2005.1405701},
 ISSN={0098-3063},
 }
 
+@inproceedings{tkaragiannis:2005,
+ author = {Karagiannis, Thomas and Papagiannaki, 
+		   Konstantina and Faloutsos, Michalis},
+ title = {{BLINC: Multilevel Traffic Classification in the Dark}},
+ booktitle = {Proceedings of the 2005 Conference on Applications, 
+			  Technologies, Architectures, and Protocols for 
+			  Computer Communications},
+ series = {SIGCOMM '05},
+ year = {2005},
+ isbn = {1-59593-009-4},
+ location = {Philadelphia, Pennsylvania, USA},
+ pages = {229--240},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/1080091.1080119},
+ doi = {http://doi.acm.org/10.1145/1080091.1080119},
+ acmid = {1080119},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {host behavior, traffic classification, transport layer},
+}
+
+@inproceedings{kxu:2005,
+ author = {Xu, Kuai and Zhang, Zhi-Li and Bhattacharyya, Supratik},
+ title = {{Profiling Internet Backbone Traffic: 
+		   Behavior Models and Applications}},
+ booktitle = {{Proceedings of the 2005 Conference on Applications, Technologies,
+ 			   Architectures, and Protocols for Computer Communications}},
+ series = {SIGCOMM '05},
+ year = {2005},
+ isbn = {1-59593-009-4},
+ location = {Philadelphia, Pennsylvania, USA},
+ pages = {169--180},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/1080091.1080112},
+ doi = {http://doi.acm.org/10.1145/1080091.1080112},
+ acmid = {1080112},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {behavior profiles, network monitoring, traffic measurement},
+}
+
 @inproceedings{jdean:2004,
  author = {Dean, Jeffrey and Ghemawat, Sanjay},
  title = {MapReduce: simplified data processing on large clusters},
