trafficm: added netflow and ipfix snippet

--- a/frontback/contents.tex
+++ b/frontback/contents.tex
@@ -96,6 +96,7 @@
 				\acro{SNMP}{Simple Network Management Protocol}									
 				\acro{RTFM}{Realtime Traffic Flow Measurement}
 				\acro{GUI}{Graphical User Interface}
+				\acro{IETF}{Internet Engineering Task Force}
     \end{acronym}                     
 \endgroup
 
