--- a/bibliography.bib
+++ b/bibliography.bib
@@ -19,7 +19,6 @@
   address = {Kansas City}
 }
 
-
 @unpublished{jschauer:2012,
  author = {Schauer, Johannes and Melnikov, Nikolay and 
 		   		 Sch\"{o}nw\"{a}lder, J\"{u}rgen},
@@ -380,6 +379,21 @@ ISSN={},
 	type = {Internet-Draft},
 	url = {http://tools.ietf.org/id/draft-cheshire-nat-pmp-03.txt},
 	year = {2008}
+}
+
+@misc{rfc5101,
+  author="B. Claise",
+  title="{Specification of the IP Flow Information 
+					Export (IPFIX) Protocol for the Exchange
+					of IP Traffic Flow Information}",
+  series="Request for Comments",
+  number="5101",
+  howpublished="RFC 5101 (Proposed Standard)",
+  publisher="IETF",
+  organization="Internet Engineering Task Force",
+  year=2008,
+  month=jan,
+  url="http://www.ietf.org/rfc/rfc5101.txt",
 }
 
 @inproceedings{vmarinov:2008,
