--- a/thesis-preamble.sty
+++ b/thesis-preamble.sty
@@ -20,7 +20,7 @@
 \newcommand{\myDepartment}{School of Engineering and Science\xspace}
 \newcommand{\myUni}{\protect{Jacobs University Bremen}\xspace}
 \newcommand{\myLocation}{Bremen, Germany\xspace}
-\newcommand{\myTime}{June 2012\xspace}
+\newcommand{\myTime}{June $2012$\xspace}
 \newcommand{\myVersion}{Version 3.0\xspace}
 
 
