trafficm: added flow applicability

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -169,6 +169,25 @@ ISSN={1521-9615},
  year = {2011},
 }
 
+@inproceedings{sdominik:2010,
+ author = {Schatzmann, Dominik and M\"{u}hlbauer, Wolfgang and Spyropoulos, Thrasyvoulos and Dimitropoulos, Xenofontas},
+ title = {{Digging into HTTPS: Flow-based Classification of Webmail Traffic}},
+ booktitle = {Proceedings of the 10th annual
+ 							conference on Internet measurement},
+ series = {IMC '10},
+ year = {2010},
+ isbn = {978-1-4503-0483-2},
+ location = {Melbourne, Australia},
+ pages = {322--327},
+ numpages = {6},
+ url = {http://doi.acm.org/10.1145/1879141.1879184},
+ doi = {http://doi.acm.org/10.1145/1879141.1879184},
+ acmid = {1879184},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {flow-level data, https traffic, traffic classification, webmail},
+} 
+
 @mastersthesis{nmelnikov:thesis:2010,
 author = {Melnikov, Nikolay},
 title = {{Cybermetrics: Identification of Users through Network Flow Analysis}},
@@ -537,6 +556,21 @@ ISSN={0098-3063},
  publisher = {ACM},
  address = {New York, NY, USA},
  keywords = {behavior profiles, network monitoring, traffic measurement},
+}
+
+@inproceedings{mkim:2004,
+author={Myung-Sup Kim and Hun-Jeong Kong and Seong-Cheol Hong
+ 				and Seung-Hwa Chung and Hong, J.W.}, 
+booktitle={Network Operations and Management 
+					 Symposium, 2004. NOMS 2004. IEEE/IFIP}, 
+title={{A Flow-based Method for Abnormal Network Traffic Detection}}, 
+year={2004}, 
+month={april}, 
+volume={1}, 
+number={}, 
+pages={599 -612 Vol.1}, 
+doi={10.1109/NOMS.2004.1317747}, 
+ISSN={1542-1201},
 }
 
 @inproceedings{jdean:2004,
