--- a/frontback/contents.tex
+++ b/frontback/contents.tex
@@ -97,6 +97,7 @@
 				\acro{RTFM}{Realtime Traffic Flow Measurement}
 				\acro{GUI}{Graphical User Interface}
 				\acro{IETF}{Internet Engineering Task Force}
+				\acro{DoS}{Denial of Service}
     \end{acronym}                     
 \endgroup
 
