flowp: added netflow introduction and version history

--- a/frontback/contents.tex
+++ b/frontback/contents.tex
@@ -98,6 +98,8 @@
 				\acro{GUI}{Graphical User Interface}
 				\acro{IETF}{Internet Engineering Task Force}
 				\acro{DoS}{Denial of Service}
+				\acro{AS}{Autonomous Systems}
+				\acro{CIDR}{Classless Inter-Domain Routing}
     \end{acronym}                     
 \endgroup
 
