flowp: added flow introduction and netflow protocol operation

--- a/frontback/contents.tex
+++ b/frontback/contents.tex
@@ -100,6 +100,7 @@
 				\acro{DoS}{Denial of Service}
 				\acro{AS}{Autonomous Systems}
 				\acro{CIDR}{Classless Inter-Domain Routing}
+				\acro{SCTP}{Stream Control Transmission Protocol}
     \end{acronym}                     
 \endgroup
 
