flowp: added adaptive netflow

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -573,6 +573,26 @@ doi={10.1109/NOMS.2004.1317747},
 ISSN={1542-1201},
 }
 
+@inproceedings{cestan:2004,
+ author = {Estan, Cristian and Keys, Ken and Moore, David and Varghese, George},
+ title = {{Building a Better NetFlow}},
+ booktitle = {{Proceedings of the 2004 conference on Applications,
+							Technologies, Architectures, and Protocols for
+							Computer Communications}},
+ series = {SIGCOMM 2004},
+ year = {2004},
+ isbn = {1-58113-862-8},
+ location = {Portland, Oregon, USA},
+ pages = {245--256},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/1015467.1015495},
+ doi = {http://doi.acm.org/10.1145/1015467.1015495},
+ acmid = {1015495},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {data summarization, network monitoring, traffic measurement},
+}
+
 @inproceedings{jdean:2004,
  author = {Dean, Jeffrey and Ghemawat, Sanjay},
  title = {MapReduce: simplified data processing on large clusters},
