flowp: added flexible netflow

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -279,6 +279,47 @@ ISSN={},
  keywords = {flow query language, netflow, network monitoring},
 } 
 
+@misc{rfc5476,
+  author="B. Claise and A. Johnson and J. Quittek",
+  title="{{Packet Sampling (PSAMP) Protocol Specifications}}",
+  series="Request for Comments",
+  number="5476",
+  howpublished="RFC 5476 (Proposed Standard)",
+  publisher="IETF",
+  organization="Internet Engineering Task Force",
+  year=2009,
+  month=mar,
+  url="http://www.ietf.org/rfc/rfc5476.txt",
+}
+
+@misc{rfc5475,
+  author="T. Zseby and M. Molina and 
+					N. Duffield and S. Niccolini and F. Raspall",
+  title="{Sampling and Filtering Techniques for IP Packet Selection}",
+  series="Request for Comments",
+  number="5475",
+  howpublished="RFC 5475 (Proposed Standard)",
+  publisher="IETF",
+  organization="Internet Engineering Task Force",
+  year=2009,
+  month=mar,
+  url="http://www.ietf.org/rfc/rfc5475.txt",
+}
+
+@misc{rfc5474,
+  author="N. Duffield and D. Chiou and B. Claise
+ 					and A. Greenberg and M. Grossglauser and J. Rexford",
+  title="{A Framework for Packet Selection and Reporting}",
+  series="Request for Comments",
+  number="5474",
+  howpublished="RFC 5474 (Informational)",
+  publisher="IETF",
+  organization="Internet Engineering Task Force",
+  year=2009,
+  month=mar,
+  url="http://www.ietf.org/rfc/rfc5474.txt",
+}
+
 @article{newscientist:2009,
  author = {Daviss, Bennett},
  title = {{Building a Crash-Proof Internet}},
@@ -352,6 +393,20 @@ ISSN={},
  address = {Berlin, Heidelberg},
  keywords = {IPFIX, NetFlow, Network measurement},
 } 
+
+@misc{rfc5246,
+  author="T. Dierks and E. Rescorla",
+  title="{The Transport Layer Security (TLS) Protocol Version 1.2}",
+  series="Request for Comments",
+  number="5246",
+  howpublished="RFC 5246 (Proposed Standard)",
+  publisher="IETF",
+  organization="Internet Engineering Task Force",
+  year=2008,
+  month=aug,
+  note="Updated by RFCs 5746, 5878, 6176",
+  url="http://www.ietf.org/rfc/rfc5246.txt",
+}
 
 @inproceedings{rbeverly:2008,
   author = {Robert Beverly and Karen Sollins},
@@ -501,6 +556,20 @@ ISSN={1545-5971}
  booktitle = {{Proceedings of the 18th Annual FIRST conference}},
  year = {2006},
  location = {Baltimore, Maryland, USA},
+}
+
+@misc{rfc4347,
+  author="E. Rescorla and N. Modadugu",
+  title="{Datagram Transport Layer Security}",
+  series="Request for Comments",
+  number="4347",
+  howpublished="RFC 4347 (Proposed Standard)",
+  publisher="IETF",
+  organization="Internet Engineering Task Force",
+  year=2006,
+  month=apr,
+  note="Updated by RFC 5746",
+  url="http://www.ietf.org/rfc/rfc4347.txt",
 }
 
 @article{mbodlaender:2005,
