--- a/frontback/contents.tex
+++ b/frontback/contents.tex
@@ -101,6 +101,9 @@
 				\acro{AS}{Autonomous Systems}
 				\acro{CIDR}{Classless Inter-Domain Routing}
 				\acro{SCTP}{Stream Control Transmission Protocol}
+				\acro{PSAMP}{Packet Sampling}
+				\acro{TLS}{Transport Layer Security}
+				\acro{DTLS}{Datagram Transport Layer Security}
     \end{acronym}                     
 \endgroup
 
