flowp: added flowrank

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -169,6 +169,28 @@ ISSN={1521-9615},
  year = {2011},
 }
 
+@inproceedings{swang:2010,
+ author = {Wang, Shaonan and State, Radu and
+ 					 Ourdane, Mohamed and Engel, Thomas},
+ title = {{FlowRank: Ranking NetFlow Records}},
+ booktitle = {Proceedings of the 6th International 
+							Wireless Communications and Mobile 
+							Computing Conference},
+ series = {IWCMC '10},
+ year = {2010},
+ isbn = {978-1-4503-0062-9},
+ location = {Caen, France},
+ pages = {484--488},
+ numpages = {5},
+ url = {http://doi.acm.org/10.1145/1815396.1815508},
+ doi = {http://doi.acm.org/10.1145/1815396.1815508},
+ acmid = {1815508},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {NeFlow monitoring, dependency graphs, 
+						 network traffic visualization},
+}
+
 @inproceedings{sdominik:2010,
  author = {Schatzmann, Dominik and M\"{u}hlbauer, Wolfgang and Spyropoulos, Thrasyvoulos and Dimitropoulos, Xenofontas},
  title = {{Digging into HTTPS: Flow-based Classification of Webmail Traffic}},
@@ -767,6 +789,20 @@ ISSN={1542-1201},
   year=1999,
   month=oct,
   url="http://www.ietf.org/rfc/rfc2722.txt",
+}
+
+@techreport{lpage:1999,
+  number = {1999-66},
+  month = {November},
+  author = {Lawrence Page and Sergey Brin
+ 						and Rajeev Motwani and Terry Winograd},
+  note = {Previous number = SIDL-WP-1999-0120},
+  title = {{The PageRank Citation Ranking: Bringing Order to the Web}},
+	type = {Technical Report},
+  publisher = {Stanford InfoLab},
+  year = {1999},
+  institution = {Stanford InfoLab},
+  url = {http://ilpubs.stanford.edu:8090/422/},
 }
 
 @article{yyang:1997,
