flowp: completed netflow

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -33,6 +33,22 @@
  year = {2012},
 }
 
+@inproceedings{lderi:2011,
+author={Deri, L. and Chou, E. and Cherian, Z. 
+				and Karmarkar, K. and Patterson, M.}, 
+booktitle={Network and Service Management (CNSM), 2011
+ 					 7th International Conference on}, 
+title={{Increasing Data Center Network Visibility with Cisco NetFlow-Lite}}, 
+year={2011}, 
+month={oct.}, 
+volume={}, 
+number={}, 
+pages={1 -6}, 
+keywords={Catalyst 4948E switches;Cisco NetFlow-Lite;IP address;IP traffic information;TCP ports;UDP ports;anomaly detection;byte counts;capacity planning;custom ASIC;data center network visibility;de-facto protocol;high-speed network monitoring;nProbe;network troubleshooting;packet categorization;packet forwarding;IP networks;computer network security;telecommunication switching;telecommunication traffic;transport protocols;}, 
+doi={}, 
+ISSN={},
+}
+
 @book{csanders:2011,
   title={{Practical Packet Analysis: Using Wireshark
  					to Solve Real-World Network Problems}},
@@ -722,6 +738,13 @@ ISSN={1542-1201},
   year=2003,
   month=aug,
   url="http://www.ietf.org/rfc/rfc3577.txt",
+}
+
+@inproceedings{lderi:2003,
+    author = {Luca Deri},
+    title = {nProbe: an Open Source NetFlow probe for Gigabit Networks},
+    booktitle = {In Proceedings of Terena TNC 2003},
+    year = {2003}
 }
 
 @article{falted:2003,
