flowp: added ipfix introduction

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -747,6 +747,14 @@ ISSN={1542-1201},
     year = {2003}
 }
 
+@article{pkohler:2003,
+  author="Kohler, Paul and Claise, Benoit",
+  title="{IPFIX Fine-Tunes Traffic Analysis}",
+  journal="Network World",
+  year=2003,
+  month=aug,
+}
+
 @article{falted:2003,
  author = {Francesc Alted and Mercedes Fern\'{a}ndez-Alonso},
  title = {{PyTables: Processing And Analyzing Extremely Large Amounts Of Data In 
