flowp: added ipfix architecture

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -358,6 +358,20 @@ ISSN={},
   url="http://www.ietf.org/rfc/rfc5474.txt",
 }
 
+@misc{rfc5470,
+  author="G. Sadasivan and N. Brownlee and B. Claise and J. Quittek",
+  title="{Architecture for IP Flow Information Export}",
+  series="Request for Comments",
+  number="5470",
+  howpublished="RFC 5470 (Informational)",
+  publisher="IETF",
+  organization="Internet Engineering Task Force",
+  year=2009,
+  month=mar,
+  note="Updated by RFC 6183",
+  url="http://www.ietf.org/rfc/rfc5470.txt",
+}
+
 @article{newscientist:2009,
  author = {Daviss, Bennett},
  title = {{Building a Crash-Proof Internet}},
