draft 1: moved acronyms to appendix, removed implementation sections, added todos

--- a/frontback/abstract.tex
+++ b/frontback/abstract.tex
@@ -9,7 +9,6 @@
 \let\cleardoublepage\relax
 
 \chapter*{Abstract}
-Short summary of the contents in English\dots
-
+\todo[inline]{Abstract: Write it! \ldots}
 \endgroup			
 \vfill
