--- a/frontback/contents.tex
+++ b/frontback/contents.tex
@@ -57,54 +57,12 @@
     \vspace*{8ex}
        
     %*******************************************************
-    % Acronyms
-    %*******************************************************
-    %\phantomsection 
+    % List of TODOs
+    %*******************************************************      
+	  %\phantomsection 
     \refstepcounter{dummy}
-    \pdfbookmark[1]{Acronyms}{acronyms}
-    \markboth{\spacedlowsmallcaps{Acronyms}}{\spacedlowsmallcaps{Acronyms}}
-    \chapter*{Acronyms}
-    \begin{acronym}[UML]
-        \acro{IPFIX}{Internet Protocol Flow Information Export}
-        \acro{HDF}{Hierarchical Data Format}
-				\acro{LALR}{Look-Ahead LR Parser}
-				\acro{PLY}{Python Lex-Yacc}
-				\acro{HDFS}{Hadoop Distributed File System}
-				\acro{API}{Application Programming Interface}
-				\acro{CNF}{Conjunctive Normal Form}
-				\acro{SSDP}{Simple Service Discovery Protocol}
-				\acro{IP}{Internet Protocol}
-				\acro{UDP}{User Datagram Protocol}
-				\acro{TCP}{Transmission Control Protocol}
-				\acro{NAT-PMP}{Network Address Translation Port Mapping Protocol}
-				\acro{ccTLD}{Country Code Top-Level Domain}
-				\acro{HTTP}{Hypertext Transfer Protocol}
-				\acro{IaaS}{Infrastructure as a Service}
-				\acro{NaaS}{Network as a Service}
-				\acro{vLANs}{Virtual Local Area Networks}
-				\acro{ACLs}{Access Control Lists}
-				\acro{MPLS}{Multiprotocol Label Switching}
-				\acro{RTT}{Round Trip Time}
-				\acro{SVMs}{Support Vector Machines}
-				\acro{FF}{Greedy Forward Fitting}
-				\acro{SMTP}{Simple Mail Transfer Protocol}
-				\acro{DDoS}{Distributed Denial of Service}
-				\acro{CAPTCHA}{Completely Automated Public Turing 
-											 Test to Tell Computers and Humans Apart}
-				\acro{RMON}{Remote Network Monitoring}
-				\acro{MIB}{Management Information Base}									
-				\acro{SNMP}{Simple Network Management Protocol}									
-				\acro{RTFM}{Realtime Traffic Flow Measurement}
-				\acro{GUI}{Graphical User Interface}
-				\acro{IETF}{Internet Engineering Task Force}
-				\acro{DoS}{Denial of Service}
-				\acro{AS}{Autonomous Systems}
-				\acro{CIDR}{Classless Inter-Domain Routing}
-				\acro{SCTP}{Stream Control Transmission Protocol}
-				\acro{PSAMP}{Packet Sampling}
-				\acro{TLS}{Transport Layer Security}
-				\acro{DTLS}{Datagram Transport Layer Security}
-    \end{acronym}                     
+    \listoftodos[List of TODOs]
+
 \endgroup
 
 \cleardoublepage
