--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -1,9 +1,9 @@
-...
+\todo[inline]{Introduction: Elevator Pitch \ldots}
 
 \vspace{50pt}
 
 In chapter $\ref{ch:traffic-measurement-approaches}$ we discuss the current state-of-the-art traffic measurement techniques, the protocols supporting them, their pros and cons and how they are being used to mine the behavioral patterns of the network traffic today. 
 
-In chapter $\ref{ch:flow-export-protocols}$ ...
+\todo[inline]{Chapter $\ref{ch:flow-export-protocols}$: Elevator Pitch  \ldots}
 
-In chapter $\ref{ch:languages-and-tools}$ ...
+\todo[inline]{Chapter $\ref{ch:languages-and-tools}$: Elevator Pitch \ldots}
