--- a/thesis.tex
+++ b/thesis.tex
@@ -3,6 +3,7 @@
                BCOR=5mm,paper=a4,fontsize=11pt,ngerman,american,]{scrreprt}
 \usepackage{thesis-preamble}
 \usepackage{pifont}
+\usepackage{todonotes}
 \hypersetup{pdffitwindow=true}
 
 \begin{document}
@@ -35,27 +36,27 @@
 \include{chapters/state-of-the-art/f}
 \include{chapters/state-of-the-art/flowy-applications}
 
-\cleardoublepage
-\ctparttext{\input{sections/motivation.tex}}
-\part{Motivation}
+% \cleardoublepage
+% \ctparttext{\input{sections/motivation.tex}}
+% \part{Motivation}
 
 \cleardoublepage
 \ctparttext{\input{sections/work-plan.tex}}
 \part{Work Plan}
 
-\cleardoublepage
-\ctparttext{\input{sections/implementation-and-evaluation.tex}}
-\part{Implementation and Evaluation}
-\include{chapters/implementation-and-evaluation/design}
-\include{chapters/implementation-and-evaluation/implementation}
-\include{chapters/implementation-and-evaluation/performance-evaluation}
-\include{chapters/implementation-and-evaluation/future-work}
-\include{chapters/implementation-and-evaluation/conclusion}
-
+% \cleardoublepage
+% \ctparttext{\input{sections/implementation-and-evaluation.tex}}
+% \part{Implementation and Evaluation}
+% \include{chapters/implementation-and-evaluation/design}
+% \include{chapters/implementation-and-evaluation/implementation}
+% \include{chapters/implementation-and-evaluation/performance-evaluation}
+% \include{chapters/implementation-and-evaluation/future-work}
+% \include{chapters/implementation-and-evaluation/conclusion}
+% 
 \appendix
 \cleardoublepage
 \part{Appendix}
 \include{chapters/appendix}
 \include{frontback/bibliography}
-\include{frontback/declaration}
+% \include{frontback/declaration}
 \end{document}
