--- a/thesis-preamble.sty
+++ b/thesis-preamble.sty
@@ -11,7 +11,7 @@
 \newcommand{\myTitle}{F $(v2)$\xspace}
 \newcommand{\mySubtitle}{A complete system integration of 
 												 stream-based IP flow-record querier\xspace}
-\newcommand{\myDegree}{Masters Thesis\xspace}
+\newcommand{\myDegree}{Masters Thesis Proposal\xspace}
 \newcommand{\myName}{Vaibhav Bajpai\xspace}
 \newcommand{\myProf}{Prof. Dr. J\"urgen Sch\"onw\"alder \xspace}
 \newcommand{\myOtherProf}{Put name here\xspace}
