changed titlepage: added prof' name, and CNDS

--- a/frontback/titlepage.tex
+++ b/frontback/titlepage.tex
@@ -9,17 +9,18 @@
         		\color{Black}\mySubtitle \\ \bigskip
         \endgroup
 				\vfill
-        \Large{\myName} \\ \bigskip
-        \vfill
-
-        \myDegree \\ \bigskip
+        \huge{\myName} \\ \bigskip
+				\vfill
+        \Large\underline{\myDegree} \\ \bigskip
+				\vfill
+				\small{supervised by} \\
+				\Large{\myProf} \\ \vfill
+				\large\myFaculty \\
         \myDepartment \\                            
         \myUni \\ 
 				\myLocation \\ \bigskip
 				\vfill
-				
-				% \vfill
-				\myTime
+				\Large\myTime
     \end{center}  
   \end{addmargin}       
 \end{titlepage}   
