--- a/thesis-preamble.sty
+++ b/thesis-preamble.sty
@@ -16,12 +16,12 @@
 \newcommand{\myProf}{Prof. Dr. J\"urgen Sch\"onw\"alder \xspace}
 \newcommand{\myOtherProf}{Put name here\xspace}
 \newcommand{\mySupervisor}{Put name here\xspace}
-\newcommand{\myFaculty}{Put data here\xspace}
+\newcommand{\myFaculty}{Computer Networks and Distributed Systems\xspace}
 \newcommand{\myDepartment}{School of Engineering and Science\xspace}
 \newcommand{\myUni}{\protect{Jacobs University Bremen}\xspace}
 \newcommand{\myLocation}{Bremen, Germany\xspace}
-\newcommand{\myTime}{June $2012$\xspace}
-\newcommand{\myVersion}{Version 3.0\xspace}
+\newcommand{\myTime}{\monthname \xspace $2012$ \xspace}
+\newcommand{\myVersion}{Version 1.0\xspace}
 
 
 % ********************************************************************
