--- a/thesis.tex
+++ b/thesis.tex
@@ -4,6 +4,7 @@
 \usepackage{thesis-preamble}
 \usepackage{pifont}
 \usepackage{todonotes}
+\usepackage{datetime}
 \hypersetup{pdffitwindow=true}
 
 \begin{document}
