flowp: completed ipfix

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -199,6 +199,19 @@ ISSN={1521-9615},
  year = {2011},
 }
 
+@misc{rfc5815,
+  author="T. Dietz and A. Kobayashi and B. Claise and G. Muenz",
+  title="{Definitions of Managed Objects for IP Flow Information Export}",
+  series="Request for Comments",
+  number="5815",
+  howpublished="RFC 5815 (Proposed Standard)",
+  publisher="IETF",
+  organization="Internet Engineering Task Force",
+  year=2010,
+  month=apr,
+  url="http://www.ietf.org/rfc/rfc5815.txt",
+}
+
 @inproceedings{swang:2010,
  author = {Wang, Shaonan and State, Radu and
  					 Ourdane, Mohamed and Engel, Thomas},
@@ -440,6 +453,20 @@ ISSN={},
  year = {2009},
 }
 
+@misc{rfc5474,
+  author="N. Duffield and D. Chiou and B. Claise
+ 					and A. Greenberg and M. Grossglauser and J. Rexford",
+  title="{A Framework for Packet Selection and Reporting}",
+  series="Request for Comments",
+  number="5474",
+  howpublished="RFC 5474 (Informational)",
+  publisher="IETF",
+  organization="Internet Engineering Task Force",
+  year=2009,
+  month=mar,
+  url="http://www.ietf.org/rfc/rfc5474.txt",
+}
+
 @inproceedings{vmarinov:2009,
  author = {Marinov, Vladislav and Sch\"{o}nw\"{a}lder, J\"{u}rgen},
  title = {{Design of a Stream-Based IP Flow Record Query Language}},
@@ -554,6 +581,19 @@ ISSN={},
  publisher = {Springer-Verlag},
  address = {Berlin, Heidelberg},
  keywords = {IPFIX, NetFlow, network traffic analysis, query language},
+}
+
+@misc{rfc5103,
+  author="B. Trammell and E. Boschi",
+  title="{Bidirectional Flow Export Using IP Flow Information Export (IPFIX)}",
+  series="Request for Comments",
+  number="5103",
+  howpublished="RFC 5103 (Proposed Standard)",
+  publisher="IETF",
+  organization="Internet Engineering Task Force",
+  year=2008,
+  month=jan,
+  url="http://www.ietf.org/rfc/rfc5103.txt",
 }
 
 @misc{rfc5102,
