flowp: added sflow overview

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -862,6 +862,20 @@ ISSN={1542-1201},
  keywords = {Biometric techniques, keystroke analysis},
 }
 
+@misc{rfc3176,
+  author="P. Phaal and S. Panchen and N. McKee",
+  title="{InMon Corporation's sFlow: A Method for 
+					Monitoring Traffic in Switched and Routed Networks}",
+  series="Request for Comments",
+  number="3176",
+  howpublished="RFC 3176 (Informational)",
+  publisher="IETF",
+  organization="Internet Engineering Task Force",
+  year=2001,
+  month=sep,
+  url="http://www.ietf.org/rfc/rfc3176.txt",
+}
+
 @inproceedings{sromig:2000,
  author = {Romig, Steve},
  title = {{The OSU Flow-tools Package and CISCO NetFlow Logs}},
