flowp: added sflow data format

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -957,6 +957,19 @@ ISSN={1542-1201},
     url="http://www.ietf.org/rfc/rfc1157.txt",
 }
 
+@misc{rfc1014,
+  author="Sun Microsystems",
+  title="{XDR: External Data Representation standard}",
+  series="Request for Comments",
+  number="1014",
+  howpublished="RFC 1014",
+  publisher="IETF",
+  organization="Internet Engineering Task Force",
+  year=1987,
+  month=jun,
+  url="http://www.ietf.org/rfc/rfc1014.txt",
+}
+
 @inproceedings{wroyce:1987,
  author = {Royce, W. W.},
  title = {{Managing the Development of Large 
