flowp: added chapter introduction

--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -4,6 +4,9 @@
 
 In chapter $\ref{ch:traffic-measurement-approaches}$ we discuss the current state-of-the-art traffic measurement techniques, the protocols supporting them, their pros and cons and how they are being used to mine the behavioral patterns of the network traffic today. 
 
+In chapter $\ref{ch:flow-export-protocols}$ we discuss the current state-of-the-art traffic measurement techniques, the protocols supporting them, their pros and cons and how they are being used to mine the behavioral patterns of the network traffic today. 
+
+
 \todo[inline]{Chapter $\ref{ch:flow-export-protocols}$: Elevator Pitch  \ldots}
 
 \todo[inline]{Chapter $\ref{ch:languages-and-tools}$: Elevator Pitch \ldots}
