flowp: completed chapter 2 and written the elevator pitch

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -19,6 +19,13 @@
   address = {Kansas City}
 }
 
+@manual{dell-userguide,
+  title={{Dell PowerConnect M6220, M6348, M8024, 
+					and M8024‑k Switch User’s Configuration Guide}},
+  organization= {Dell},
+  address = {Texas}
+}
+
 @unpublished{jschauer:2012,
  author = {Schauer, Johannes and Melnikov, Nikolay and 
 		   		 Sch\"{o}nw\"{a}lder, J\"{u}rgen},
