--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -4,9 +4,7 @@
 
 In chapter $\ref{ch:traffic-measurement-approaches}$ we discuss the current state-of-the-art traffic measurement techniques, the protocols supporting them, their pros and cons and how they are being used to mine the behavioral patterns of the network traffic today. 
 
-In chapter $\ref{ch:flow-export-protocols}$ we discuss the current state-of-the-art traffic measurement techniques, the protocols supporting them, their pros and cons and how they are being used to mine the behavioral patterns of the network traffic today. 
+In chapter $\ref{ch:flow-export-protocols}$ we discuss Cisco's proprietary and \ac{IETF}'s standardized protocol for \ac{IP} flow export. We discuss their architecture, protocol operations, their message formats and the future they are heading towards as seen from today.
 
-
-\todo[inline]{Chapter $\ref{ch:flow-export-protocols}$: Elevator Pitch  \ldots}
 
 \todo[inline]{Chapter $\ref{ch:languages-and-tools}$: Elevator Pitch \ldots}
