uncommented languages and tools chapter: removed include from thesis.tex and removed elevator pitch from introduction.tex

--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -6,5 +6,4 @@ In chapter $\ref{ch:traffic-measurement-approaches}$ we discuss the current stat
 
 In chapter $\ref{ch:flow-export-protocols}$ we discuss Cisco's proprietary and \ac{IETF}'s standardized protocol for \ac{IP} flow export. We discuss their architecture, protocol operations, their message formats and the future they are heading towards as seen from today.
 
-
-\todo[inline]{Chapter $\ref{ch:languages-and-tools}$: Elevator Pitch \ldots}
+% \todo[inline]{Chapter $\ref{ch:languages-and-tools}$: Elevator Pitch \ldots}
