--- a/thesis.tex
+++ b/thesis.tex
@@ -26,7 +26,7 @@
 \part{Introduction}
 \include{chapters/introduction/traffic-measurement-approaches}
 \include{chapters/introduction/flow-export-protocols}
-\include{chapters/introduction/languages-and-tools}
+% \include{chapters/introduction/languages-and-tools}
 
 \cleardoublepage
 \ctparttext{\input{sections/state-of-the-art.tex}}
