added introduction section elevator pitch

--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -1,8 +1,8 @@
-\todo[inline]{Introduction: Elevator Pitch \ldots}
+The network and user behavior traffic pattern analysis is creating a lot of traction owing to its wide applicability in accounting, resource provisioning and network monitoring purposes. This section is dedicated to perform an exhaustive study on the available techniques that can perform such traffic measurements and how they are being used today. In particular, we focus our attention to the currently favored flow-capture technique by examining the de-facto protocols that describe the semantics of this flow-export. The organization of the section is described below.
 
 \vspace{50pt}
 
-In chapter $\ref{ch:traffic-measurement-approaches}$ we discuss the current state-of-the-art traffic measurement techniques, the protocols supporting them, their pros and cons and how they are being used to mine the behavioral patterns of the network traffic today. 
+In chapter $\ref{ch:traffic-measurement-approaches}$ we discuss the current state-of-the-art traffic measurement techniques, the protocols supporting them, their pros and cons and how they are being used to mine the behavioral patterns of the current network traffic. 
 
 In chapter $\ref{ch:flow-export-protocols}$ we discuss Cisco's proprietary and \ac{IETF}'s standardized protocol for \ac{IP} flow export. We discuss their architecture, protocol operations, their message formats and the future they are heading towards as seen from today.
 
