commented out the work plan, added marginpar in flowy 2.0

--- a/frontback/contents.tex
+++ b/frontback/contents.tex
@@ -56,12 +56,12 @@
 
     \vspace*{8ex}
        
-    %*******************************************************
-    % List of TODOs
-    %*******************************************************      
-	  %\phantomsection 
-    \refstepcounter{dummy}
-    \listoftodos[List of TODOs]
+	  %     %*******************************************************
+	  %     % List of TODOs
+	  %     %*******************************************************      
+	  % %\phantomsection 
+	  %     \refstepcounter{dummy}
+	  %     \listoftodos[List of TODOs]
 
 \endgroup
 
