--- a/thesis.tex
+++ b/thesis.tex
@@ -41,9 +41,9 @@
 % \ctparttext{\input{sections/motivation.tex}}
 % \part{Motivation}
 
-\cleardoublepage
-\ctparttext{\input{sections/work-plan.tex}}
-\part{Work Plan}
+% \cleardoublepage
+% \ctparttext{\input{sections/work-plan.tex}}
+% \part{Work Plan}
 
 % \cleardoublepage
 % \ctparttext{\input{sections/implementation-and-evaluation.tex}}
